tests/final/expect/15__diag__axis4_wave11_dual_convergence_order_a_winner_arity_fail_no_crash.diag
Diagnostics:
Error at (546105:12): Undeclared identifier
   Hint: AX4_W11_ORDER_A_TARGET
   Spelling: axis4_wave11_order_a_layer_a.h:546105:12
